consignment-service/deployment/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: consignment-deployment
  namespace: shippy-grpc
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: consignment-app
    spec:
        containers:
        - name: consignment
          image: gcr.io/gcptraining-17042017/python-grpc-microservice/consignment:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 50051
            name: cons-port
