consignment-service/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: consignment 
  namespace: shippy-grpc
  labels:
    app: consignment
spec:
  type: LoadBalancer
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: consignment
