consignment-service/deployment/service_new.yml
apiVersion: v1
kind: Service
metadata:
  name: consignment-svc 
  namespace: shippy-grpc
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
    name: cons-grpc
  selector:
    app: consignment-app
