consignment-service/deployment/glbc_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "gce"
  name: shippy-ingress
  namespace: shippy-grpc
spec:
  rules:
  - host: shippy.example.com
    http:
      paths:
      - path: /ui
        backend:
          serviceName: client
          servicePort: 5000 
      - path: /getConsignment
        backend:
          serviceName: consignment
          servicePort: 50051
      - path: /getVessel
        backend:
          serviceName: vessel
          servicePort: 50052
