consignment-service/deployment/nginx_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  name: shippy-ingress
  namespace: shippy-grpc
spec:
  rules:
  - host: shippy.example.com
    http:
      paths:
      - path: /getConsignment
        backend:
          serviceName: consignment-app
          servicePort: 50051
      - path: /getVessel
        backend:
          serviceName: vessel-app
          servicePort: 50052
      - path: /ui
        backend:
          serviceName: client-app
          servicePort: 5000
