consignment-service/deployment/nginx_ingress_grpc.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  name: shippy-ingress-grpc
  namespace: shippy-grpc
spec:
  tls:
  - hosts:
    - shippy.example.com
    secretName: shippy-secret
  rules:
  - host: shippy.example.com
    http:
      paths:
      - path: /Vessel.GetVessel
        backend:
          serviceName: vessel
          servicePort: 50052
